<resources>
    <string name="app_name">Taxi Service</string>
    <string name="mark_on_map">Отметить на карте</string>
    <string name="menu">Меню</string>
    <string name="logo">LOGO</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="signIn">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="confirm">Подтвердить</string>
    <string name="fullName">Фамилия Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="firstName">Имя</string>
    <string name="confirmPass">Повторите пароль</string>
    <string name="toRegister">Зарегистрироваться</string>
    <string name="getConfirmCode">Получить код</string>
    <string name="VerifyPhone">Подтвердить</string>
    <string name="VerifyCode">Код верификации</string>
    <string name="RenderCode">Отправить код повторно</string>
    <string name="checkout">Оформить заказ</string>
    <string name="where">Куда?</string>
    <string name="whence">Откуда?</string>
    <string-array name="spinner_array">
        <item>Наличными</item>
        <item>Банковской картой</item>
    </string-array>
    <string name="comment">Комментарий</string>
    <string name="completeCheckout">Вызвать такси</string>
    <string name="entrance">Подъезд</string>
    <string name="approximateCost">Приблизительная стоимость поездки</string>
    <string name="annulment">Отменить заказ</string>
    <string name="calling">Позвонить</string>
    <string name="detailOrder">Подробности заказа</string>
    <string name="profile">Профиль</string>
    <string name="bankCards">Банковские карты</string>
    <string name="supportService">Служба поддержки</string>
    <string name="aboutProgram">О программе</string>
    <string name="signOut">Выход</string>
    <string name="contentMesseg">Опишите возникшую проблему</string>
    <string name="yourEmail">Ваш E-mail</string>
    <string name="btnSendInquiry">Сообщить о проблеме</string>
    <string name="assesment">Оцените поездку</string>
    <string name="addCard">Добавить карту</string>
    <string name="patronymic">Отчество</string>
    <string name="enterYourFirstName">Введите ваше имя</string>
    <string name="enterYourLastName">Введите вашу фамилию</string>
    <string name="enterYourPatronymic">Введите ваше отчество</string>
    <string name="enterYourPhone">+7(999)888&#8211;7777</string>
    <string name="enterYourNewPass">Введите ваш новый пароль</string>
    <string name="enterYourNewConfirmPass">Повторите ваш новый пароль</string>
    <string name="save">Сохранить</string>
    <string name="detailWhence">Откуда</string>
    <string name="detailWhere">Куда</string>
    <string name="approximateTravelTime">Приблизительное время поездки</string>
    <string name="approximateDistance">Приблизительное расстояние</string>
    <string name="timeWaiting">Приблизительное время ожидания</string>
    <string name="driverName">ФИО водителя</string>
    <string name="brandCar">Марка машины</string>
    <string name="colorCar">Цвет машины</string>
    <string name="numberCar">Номер машины</string>
    <string name="program">Программа</string>
    <string name="programInfo">Taxi Service</string>
    <string name="descriptionProgram">Описание</string>
    <string name="descriptionProgramInfo">Программа предназначена для некоммерческого использования.
        Основная задача программы заключается в удобном поиске такси для поездок по городу. Удобная система оплаты и
        возможность оценивания поездки делают этот сервис более комфортным относительно обычного заказа такси по
        телефону.
    </string>
    <string name="organization">Организация</string>
    <string name="organizationInfo">Липецкйи государственный технический университет</string>
    <string name="author">Автор</string>
    <string name="authorInfo">Ковальчук А. Д., &#169;2017</string>
    <string name="version">Версия</string>
    <string name="yandexMaps">Яндекс.Карты</string>
    <string name="yandexMapsInfo">Выражается отдельная благодарность сервису Яндекс.Карты за предоставление доступа
        к библиотеке «Yandex Map Kit».
    </string>
    <string name="termsOfUseYandexMaps">Условия использования сервиса Яндекс.Карты</string>
    <string name="MyCity">мой город</string>
    <string name="SearchDriver">Поиск водителя...</string>
</resources>