<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/profileNameHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstName" />

        <EditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterYourFirstName"
            android:inputType="textPersonName"
            android:text="Антон" />

        <TextView
            android:id="@+id/profileFamilyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lastName" />

        <EditText
            android:id="@+id/profileFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterYourLastName"
            android:inputType="textPersonName"
            android:text="Ковальчук" />

        <TextView
            android:id="@+id/profilePatronymicHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patronymic" />

        <EditText
            android:id="@+id/profilePatronymic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterYourPatronymic"
            android:inputType="textPersonName"
            android:text="Дмитриевич" />

        <TextView
            android:id="@+id/profilePhoneHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/profilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterYourPhone"
            android:inputType="phone"
            android:text="+7(999)888&#8211;7777" />

        <TextView
            android:id="@+id/profilePassHeader1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/profilePass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterYourNewPass"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/profilePassHeader2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmPass" />

        <EditText
            android:id="@+id/profilePass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enterYourNewConfirmPass"
            android:inputType="textPassword" />
    </LinearLayout>

    <Button
        android:id="@+id/profileButton"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="saveDataProfile"
        android:text="@string/save" />
</LinearLayout>