<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:background="@color/colorDefault"
>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="start"
              android:textColor="@color/colorRed"
              android:id="@+id/regTextErrors"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/regPhone"
            android:hint="@string/phone"
            android:drawableStart="@drawable/ic_phone_black_24dp"
    >
    </EditText>

    <EditText
        android:id="@+id/mainEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_email_black_24dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/regFamily"
            android:hint="@string/lastName"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_people_black_24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/regName"
            android:hint="@string/firstName"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_person_black_24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPass"
            android:hint="@string/password"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/regPass2"
            android:hint="@string/confirmPass"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/ic_lock_black_24dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toRegister"
            android:layout_marginTop="5dp"
            android:onClick="toRegister"/>
</LinearLayout>