<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/whereAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_edit_location_black_24dp2"
        android:ems="10"
        android:hint="@string/where"
        android:inputType="textPostalAddress"
        android:imeOptions="actionSearch"/>

    <CheckBox
        android:id="@+id/whereMyCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MyCity" />

    <Button
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="checkWhereToMap"
        android:text="@string/mark_on_map" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/whereVariants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>
</LinearLayout>