<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:background="@color/colorDefault"
>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/orderingWhence1"
            android:drawableStart="@drawable/ic_edit_location_black_24dp"
            android:hint="@string/whence"
            android:onClick="openWhence"
    />
    <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:id="@+id/orderingWhence2"
            android:hint="@string/entrance"
            android:layout_marginStart="24dp"
            android:maxLength="2"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:id="@+id/orderingWhere1"
            android:drawableStart="@drawable/ic_edit_location_black_24dp2"
            android:hint="@string/where"
            android:onClick="openWhere"
    />
    <EditText
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:id="@+id/orderingWhere2"
            android:hint="@string/entrance"
            android:layout_marginStart="24dp"
            android:maxLength="2"
    />
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderingSpinnerList"
            android:layout_marginTop="5dp"
    />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
    >
        <TextView android:text="@string/approximateCost"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:textSize="17sp"
                  android:layout_gravity="center"
        />
        <TextView android:text="128 руб."
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_gravity="center"
                  android:layout_weight="1"
                  android:id="@+id/orderingCost"
                  android:textSize="34sp"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@color/colorAccent"
                  android:padding="1dp"
                  android:gravity="center"
                  android:layout_marginTop="5dp">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:inputType="textMultiLine"
                android:padding="5dp"
                android:ems="10"
                android:gravity="start"
                android:id="@+id/orderingComment"
                android:hint="@string/comment"
                android:background="@color/colorDefault"
        />

    </LinearLayout>
    <Button
            android:text="@string/completeCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orderingButton"
            android:layout_marginTop="5dp"
            android:onClick="callTaxi"
    />


</LinearLayout>